--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_launcher_icons: ^0.13.1
-  flutter_localization: ^0.2.0
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -94,3 +95,5 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/images/app_icon2.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+flutter_intl:
+  enabled: true
