--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.19.0
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
